# osmchangesets

./: .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml
examples/: client.py
osmchangesets/: __init__.py
osmchangesets/osm/: __init__.py
osmchangesets/osm/api/: __init__.py
osmchangesets/osm/changeset/: __init__.py
tests/osm/: test_api.py  test_changeset.py
